--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-http-ambient-light",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Homebridge plugin for remote light sensors over HTTP",
   "main": "index.js",
   "dependencies": {},
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lucavb/homebridge-http-ambient-light.git"
+    "url": "git+https://github.com/dweaver33/homebridge-http-ambient-light.git"
   },
   "keywords": [
     "homebridge-plugin",
@@ -19,12 +19,12 @@
     "ambientlight",
     "lightsensor"
   ],
-  "author": "Luca Becker <luca.becker@me.com> (https://github.com/lucavb)",
+  "author": "Dustin Weaver <dweaver33@gmail.com> (https://github.com/dweaver33)",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/lucavb/homebridge-http-ambient-light/issues"
+    "url": "https://github.com/dweaver33/homebridge-http-ambient-light/issues"
   },
-  "homepage": "https://github.com/lucavb/homebridge-http-ambient-light#readme",
+  "homepage": "https://github.com/dweaver33/homebridge-http-ambient-light#readme",
   "engines" : {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
